--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ management.info.env.enabled=true
 # Exclude individual endpoints
 management.endpoints.web.exposure.exclude = health,info
 info.app.name = MyFirstSpringBoot
-info.app.description = An app which I don't know how it's going to be.
+info.app.description = An app which I don't know how it's going to be It seems nice app.
 info.app.version  = 1.0.0
