Added New Functionalities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,20 @@ management.endpoints.web.exposure.exclude = health,info
 info.app.name = MyFirstSpringBoot
 info.app.description = An app which I don't know how it's going to be It seems nice app.
 info.app.version  = 1.0.0
+
+
+
+# Define custom Properties
+
+coach.name = Mohd Saalim
+team.name =  The Bachelor Club
+
+
+
+# Changing Spring Boot embedded server port
+
+server.port = 7070
+
+# Set the context path of the application
+
+server.servlet.context-path = /MyApp
